--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,32 @@
 body {
-  background-color: lightskyblue;
+  background-color: skyblue;
+  font-family: Bebas;
+}
+
+h1 {
+  text-align: center;
+  font-size: xxx-large;
+}
+
+img {
+  width: 500px;
+  height: 500px;
+  border-radius: 100px;
+  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+/* Select button */
+
+label {
+  font-family: Bebas;
+  font-size: 1rem;
+  padding-right: 10px;
+}
+
+select {
+  font-size: 0.9rem;
+  padding: 2px 5px;
 }
