--- a/styles/index.css
+++ b/styles/index.css
@@ -1,80 +1,181 @@
 /* control all text styles */
 html, body {
-    font-family: 'Epilogue', sans-serif;
-    height: 100%;
-}
-
-h1 {
-    font-family: 'Epilogue', sans-serif;
+    font-family: 'Prata', serif;
 }
 
 header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url('/images/banner.jpg');
+    border-radius: 50px;
     background-size: cover;
-    padding: 10px;
-    text-align: center;
-    font-size: 20px;
+    height: 10vh;
+    margin:10px;
+}
+
+.header-text {
+    font-size: 40px;
     color: rgba(255, 255, 255, 0.66);
     text-shadow: rgba(0, 0, 0, 0.262) 0.3em 0.3em 0.2em;
-    height: 100px;
+}
+
+h2 {
+    line-height: 10px;
 }
 
 section {
+    height: 80vh;
     display: flex;
-    height: 100%;
     background-color: white
 }
 
 sidebar {
     display: flex;
     background: rgb(255, 255, 255);
-    padding: 30px;
-    align-items: center;
-    justify-content: center;
 }
 
 .sidebar-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+
 }
 
 .sidebar-obj {
     width: 300px;
-    height: 200px;
-    margin: 20px;
-    justify-self: center;
+    margin: 10px 0 10px 50px;
+    height: fit-content;
+    padding: 15px;
     background-color: rgb(167, 221, 250);
     color: white;
     text-shadow: rgba(0, 0, 0, 0.406) 0.3em 0.3em 0.2em;
-    border-radius: 10px;
+    border-radius: 50px;
     text-align:center;
-    line-height: 50px;
 }
 
+button_area {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: 
+        "x a c e z"
+        "x b d e z";
+    grid-gap: 3px;
+    align-items: center;
+}
+
+#up {
+    grid-area: a;
+    background-color: rgb(255, 255, 255);
+    color: rgb(255, 0, 0);
+    text-shadow: rgba(0, 0, 0, 0.406) 0.3em 0.3em 0.2em;
+    border-radius: 10px;
+    text-align:center;
+    width: 100px;
+}
+
+#down {
+    grid-area: b;
+    background-color: rgb(255, 255, 255);
+    color: rgb(21, 0, 255);
+    text-shadow: rgba(0, 0, 0, 0.406) 0.3em 0.3em 0.2em;
+    border-radius: 10px;
+    text-align:center;
+    width: 100px;
+}
+
+#fahrenheit {
+    grid-area: c;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    text-shadow: rgba(0, 0, 0, 0.406) 0.3em 0.3em 0.2em;
+    border-radius: 10px;
+    text-align:center;
+    width: 40px;
+}
+
+#celsius {
+    grid-area: d;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    text-shadow: rgba(0, 0, 0, 0.406) 0.3em 0.3em 0.2em;
+    border-radius: 10px;
+    text-align:center;
+    width: 40px;
+}
+
+#temperature {
+    grid-area: e;
+    width: 100px;
+    font-size: 50px;
+    margin-left: 10px;
+}
+
+#wallpaper{
+    width:200px;
+    text-align:center;
+}
+
+#sky_submit {
+    margin-top: 10px;
+}
 
 information {
-    display: flex;
-    flex: 2;
+    width: 100%;
     background: rgb(255, 255, 255);
     align-items: center;
-    justify-content: center;
 }
 
 .information-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    height:100%;
+}
+
+.information-title {
+    width: 600px;
+    height: 100px;
+    text-align: center;
+    color: rgb(167, 221, 250);
+    font-size: 25px;
 }
 
 .information-obj {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 225px 63px 30px;
+    grid-template-areas: 
+        "a"
+        "b"
+        "c";
+
     width: 600px;
-    height: 300px;
-    background-color: rgb(167, 221, 250);
-    color: white;
-    text-shadow: rgba(0, 0, 0, 0.406) 0.3em 0.3em 0.2em;
+    background-color: rgb(82, 191, 250);
     border-radius: 10px;
-    text-align:center;
-    line-height: 50px;
+    align-self: center;
+}
+
+#sky {
+    grid-area: a;
+    align-self: top;
+    text-align: center;
+}
+
+#plants {
+    grid-area: b;
+    text-align: center;
+    height: fit-content;
+}
+
+#ground {
+    grid-area: c;
+    align-self: end;
+    text-align: center;
+    background-color: rgb(4, 122, 39);
+    border-radius: 0 0 10px 10px;
 }
 
 footer {
@@ -82,14 +183,66 @@ footer {
     padding: 10px;
     text-align: center;
     color: rgb(0, 0, 0);
-    position: fixed;
-    bottom: 0;
     width: 100%;
+    background-color: #3baae6;
+    height: 5vh;
 }
 
 /* sections sit on top of each other on smaller screens */
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
+    header {
+        display: flex;
+    }
     section {
-    flex-direction: column;
+        display: flex;
+        flex-direction: column;
+    }
+    sidebar {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+    }
+    .sidebar-obj {
+        margin: 10px;
+    }
+    information {
+        display: flex;
+        flex-direction: column;
+    }
+    .information-obj {
+        transform: scale(0.85);
+    }
+    footer {
+        /* literally cannot get this dumb thing to the bottom!!!!!!! */
+        color: rgba(255, 255, 255, 0);
+    }
+}
+
+@media (max-height: 650px) {
+    header {
+        display: flex;
+    }
+    section {
+        display: flex;
+        flex-direction: column;
+    }
+    sidebar {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+    }
+    .sidebar-obj {
+        margin: 10px;
+    }
+    information {
+        display: flex;
+        flex-direction: column;
+    }
+    .information-obj {
+        transform: scale(0.85);
+    }
+    footer {
+        /* literally cannot get this dumb thing to the bottom!!!!!!! */
+        color: rgba(255, 255, 255, 0);
     }
 }
