added grid layout to css

--- a/styles/index.css
+++ b/styles/index.css
@@ -26,3 +26,66 @@
     font-size: 50px;
     font-weight: bold;
 }
+
+
+/* grid code */
+
+.main-container {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template: 25% auto 20% / 1fr 3fr;
+  }
+  
+header {
+    background-color: #cf83cc;
+    grid-column: auto / span 3;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    padding: 4px;
+  }
+  
+.temp-container {
+    text-align: center;
+    background-color: #91d0f5;
+    grid-row: auto / span 2;
+    font-size: large;
+    padding-top: 100px;
+    padding-left: 10px;
+  }
+
+#temp-display{
+    text-align: center;
+}
+.sky-container {
+    /* grid-row: span 1 / auto; */
+    background-color:cornflowerblue;
+    text-align: left;
+    font-size: large;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  
+.garden-container {
+    text-align: center;
+    background-color: #67b19d;
+    padding: 45px;
+    font-size: xx-large;
+  }
+
+#sky-garden {
+    padding-bottom: 100px;
+    
+  }
+
+.city-name-container {
+    background-color: #e8ecae;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+  .reset {
+    background-color: #f59055;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
