--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@
     background-color: #7128a2;
     text-align: center;
     font-size: large;
-    display:grid;
+    display: grid;
     vertical-align: middle;
     align-content:center;
     grid-gap: 20px;
@@ -40,22 +40,23 @@
     display: grid;
     list-style-type: none;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    list-style-type: none;
-
 }
 
 .big-text{
-    font-size:x-large;
+    font-size:xx-large;
+    font-weight: bold;
+    color: rgb(80, 9, 94)
 }
 
 .background {
     background-color: #7128a2;
-    display:flex;
+    display: grid;
     flex-direction: column;
     flex-wrap: wrap;
     vertical-align: middle;
-    align-content:center;
+    align-content: center;
     list-style-type: none;
+    grid-gap:20px;
 }
 
 /* XXXX */
@@ -110,3 +111,45 @@ h1 {
     text-align: center;
 
 }
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: rgb(80, 9, 94);
+    color: #ddd;;
+    padding: 12px;
+    font-size: 36px;
+    border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: rgb(184, 49, 94)}
