--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+
 body {
     background-image: url(../assets/bg-image.png);
     background-size: cover;
@@ -7,7 +8,7 @@ body {
 }
 @font-face {
     font-family: Brewski;
-    src: url(../assets/BrewskiTextured.woff);
+    src: url(../assets/BrewskiTextured.woff2);
     font-display: swap;
   }
 
@@ -101,6 +102,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: left;
+    padding-right: 12px;
 }
 .sky {
     background: rgba(0, 0, 0, 0.4);
@@ -121,6 +123,46 @@ height: 153px;
 left: 251px;
 top: 0px;
 margin: 0px 14px;
+font-size: 36px;
+}
+
+#skies {
+    background: rgba(203, 174, 128, 0.85);
+border-radius: 2px;
+display: flex;
+flex-direction: row;
+justify-content: center;
+
+position: static;
+width: 100px;
+height: 35px;
+left: 29px;
+top: 87px;
+color: rgba(0, 0, 0, 0.7);
+font-family: Brewski;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 16px;
+}
+
+#input {
+    background: rgba(203, 174, 128, 0.85);
+    border-radius: 2px;
+    width: 150px;
+    height: 30px;
+    font-size: 18px;
+    line-height: 16px;
+    color: rgba(0, 0, 0, 0.7);
+    padding-top: 2px;
+
+
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .input-city {
@@ -148,13 +190,19 @@ order: 2;
 flex-grow: 0;
 margin: 0px 14px;
 }
+ label {
+    font-size: 36px;
+ }
+
+ .label-sky {
+     padding-bottom: 14px;
+ }
 .button-refresh {
     display: flex;
 flex-direction: row;
 justify-content: center;
 align-items: center;
 padding: 21px 29px;
-
 position: absolute;
 width: 362px;
 height: 67px;
@@ -166,4 +214,14 @@ border: 2px solid rgba(255, 255, 255, 0.4);
 box-sizing: border-box;
 box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.2);
 border-radius: 4px;
+font-size: 24px;
+line-height: 80%;
+transform: none;
+color:rgba(255, 255, 255, 0.7);
+}
+
+button {
+    background: rgba(203, 174, 128, 0.85);
+    border-radius: 2px;
+    color: black;
 }
