--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,54 @@
 body {
+    /* background-image: url('/assets/background-page.jpeg'); */
+    /* background-color: rgb(255, 213, 220); */
+    text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h1 {
     font-size: 40px;
+    text-align: center;
+}
+
+#cityDisplay {
+    text-align: center;
+    font-size: 30px;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 0.5fr 0.2fr 0.5fr 0.2fr 0.5fr;
+    grid-template-rows: 0.3fr 0.3fr 1.0fr 0.5fr 2fr
+}
+
+.heading {
+    margin-top: 50px;
+    grid-column: 1 / 6;
+    grid-row: 1 / 2; 
 }
 
 .tempDefault {
     background-color: rgb(254, 254, 178);
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+.skyLevel {
+    background-color: floralwhite;
+    grid-column: 3 / 4; 
+    grid-row: 3 / 4;
+}
+
+.citySelect{
+    background-color: floralwhite;
+    grid-column: 5 / 6;
+    grid-row: 3 / 4; 
+}
+
+.weatherLandscape{
+    background-color: floralwhite;
+    grid-column: 2 / 5;
+    grid-row: 5 / 6;
 }
 
 #veryColdTemp {
