--- a/styles/index.css
+++ b/styles/index.css
@@ -1,19 +1,7 @@
 body {
-  margin: 0;
-  padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #f2f2f2;
-  letter-spacing: 0.1em;
-}
-
-header {
-  width: 100%;
-  height: 100px;
-}
-
-img {
-  width: 100%;
-  height: 500px;
+  background-color: #9ba6bb;
+  letter-spacing: 0.14em;
 }
 
 h1 {
@@ -23,19 +11,34 @@ h1 {
   width: 100%;
   display: inline-block;
   border-radius: 34px;
-  background-image: linear-gradient(rgb(148, 171, 247), rgb(153, 170, 189));
+  background-image: linear-gradient(rgb(164, 169, 182), rgb(153, 170, 189));
 }
+
+img {
+  width: 100%;
+  height: 200px;
+}
+
 p {
   font-style: italic;
 }
 
 #card {
   background: rgb(246, 247, 248);
-  border-radius: 3rem;
+  border-radius: 2rem;
   box-shadow: -2px -2px 4px 0px #ffffff,
     50px 50px 50px 0px rgba(66, 62, 62, 0.25);
-  padding: 4rem 2rem;
-  display: block;
+  padding: 2rem 2rem;
+}
+
+#cooler-button {
+  background-color: #062781;
+  border: rgb(201, 199, 199) 4px solid;
+  border-radius: 3px;
+  color: white;
+  padding: 5px 10px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 #header-title {
@@ -52,6 +55,11 @@ p {
   cursor: pointer;
 }
 
+#temp-value {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
 #warmer-button {
   background-color: #810606;
   border: rgb(201, 199, 199) 4px solid;
@@ -62,46 +70,9 @@ p {
   cursor: pointer;
 }
 
-#cooler-button {
-  background-color: #062781;
-  border: rgb(201, 199, 199) 4px solid;
-  border-radius: 3px;
-  color: white;
-  padding: 5px 10px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-#temp-value {
-  font-size: 3rem;
-  font-weight: bold;
-}
-.city-container {
-  width: 100%;
-  height: 100px;
-  background-color: black;
-}
-
 .container {
-  width: 100%;
-  height: 100%;
-  margin: 4 rem auto;
-  /* display: flex; */
   display: grid;
   gap: 3rem;
   justify-content: space-evenly;
   padding-top: 100px;
-  /* align-items: center;
-  flex-direction: column; */
-  /* background-color: f2f2f2; */
-  /* background-color: rgb(201, 243, 243); */
-}
-
-.landscape-container {
-  height: ;
-}
-
-.temp-container {
-  width: 100%;
-  border-radius: 0 0 8px 8px;
 }
