--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,8 @@
 body {
-    /* background-image: url('/assets/background-page.jpeg'); */
-    /* background-color: rgb(255, 213, 220); */
+    /* background-image: url('/assets/cute-cloud-background.jpg'); */
+    background-color: rgb(255, 235, 239);
     text-align: center;
+    background-size: 480px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -12,19 +13,19 @@ h1 {
 
 #cityDisplay {
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
 }
 
 .container {
     display: grid;
     grid-template-columns: 0.5fr 0.2fr 0.5fr 0.2fr 0.5fr;
-    grid-template-rows: 0.3fr 0.3fr 1.0fr 0.5fr 2fr
+    grid-template-rows: 0.1fr 0.1fr 1.0fr 0.3fr 1.5fr
 }
 
 .heading {
     margin-top: 50px;
     grid-column: 1 / 6;
-    grid-row: 1 / 2; 
+    grid-row: 1 / 2;
 }
 
 .tempDefault {
@@ -33,14 +34,22 @@ h1 {
     grid-row: 3 / 4;
 }
 
+.tempHeading {
+    margin-top: 10px;
+}
+
 .skyLevel {
-    background-color: floralwhite;
+    background-color: rgb(194, 255, 254);
     grid-column: 3 / 4; 
     grid-row: 3 / 4;
 }
 
+.skyChoice {
+    margin-top: 20px;
+}
+
 .citySelect{
-    background-color: floralwhite;
+    background-color: rgb(197, 254, 234);
     grid-column: 5 / 6;
     grid-row: 3 / 4; 
 }
@@ -64,9 +73,19 @@ h1 {
 }
 
 #veryHotTemp {
-    background-color: rgb(255, 132, 132);
+    background-color: rgb(255, 158, 158);
 }
 
 #hotTemp {
-    background-color: rgb(255, 167, 95);
+    background-color: rgb(252, 189, 137);
+}
+
+#sky {
+    margin-top: 30px;
+    font-size: 25px;
+}
+
+#landscape {
+    font-size: 30px;
+    margin-top: 90px;
 }
