--- a/styles/index.css
+++ b/styles/index.css
@@ -29,6 +29,11 @@ h1 {
     font-family: Brewski;
     color: rgba(203, 174, 128, 0.85);
 }
+#input,input:focus, textarea:focus,select, select:focus{
+    outline: none;
+    border:none;
+}
+
 
 .container {
     display: grid;
@@ -47,13 +52,15 @@ h1 {
     border: 1px solid red;
  }
   
-.input { 
+.input-container { 
     grid-area: 3 / 1 / 4 / 2;
     border: 1px solid red;
     display:flex;
     flex-direction: row;
     padding-left: 94px;
     padding-top: 30px; }
+
+
   
 .city-name { 
     grid-area: 2 / 1 / 3 / 2;
@@ -96,6 +103,7 @@ p {
 h2 {
     font-size: 120px;
     text-align: center;
+    font-weight: 200;
 }
 
 .up-down {
@@ -103,6 +111,8 @@ h2 {
     flex-direction: column;
     justify-content: left;
     padding-right: 12px;
+    border:none;
+
 }
 .sky {
     background: rgba(0, 0, 0, 0.4);
@@ -197,7 +207,7 @@ margin: 0px 14px;
  .label-sky {
      padding-bottom: 14px;
  }
-.button-refresh {
+#button-refresh {
     display: flex;
 flex-direction: row;
 justify-content: center;
@@ -208,20 +218,30 @@ width: 362px;
 height: 67px;
 left: 94px;
 top: 583px;
-
 background: rgba(203, 174, 128, 0.27);
 border: 2px solid rgba(255, 255, 255, 0.4);
 box-sizing: border-box;
-box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.2);
 border-radius: 4px;
 font-size: 24px;
 line-height: 80%;
 transform: none;
 color:rgba(255, 255, 255, 0.7);
+box-shadow: 0px 5px 10px 0px rgba(52, 33, 16, 0.2);
+transition: all 200ms ease-in-out;
+}
+#button-refresh:hover {
+    box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.4);
+    transition: all 200ms ease-in-out;
+}
+#button-refresh:active {
+    box-shadow: 0px 5px 10px 0px rgba(52, 33, 16, 0.4);
+    opacity: 0.8;
+    transition: all 10ms ease-in-out;
 }
 
 button {
     background: rgba(203, 174, 128, 0.85);
     border-radius: 2px;
     color: black;
+    border:none;
 }
