--- a/styles/index.css
+++ b/styles/index.css
@@ -22,13 +22,38 @@
 }
 
 #tempDisplay {
-    padding: 25px;
     background-color: orange;
     font-size: 75px;
     text-align:center;
+    color: black;
+    width: 150px;
+    height: 100px;
+    padding-top: 50px;
+}
+
+#landscape {
+    width: 150px;
+    height: 70px;
+}
+
+#label {
+    background-color: rgb(62, 6, 77);
     color: white;
-    width: 200px;
-    height: 100px
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+}
+
+#buffer {
+    width: 250px;
+    height: 250px;
+}
+
+#tempControl {
+    border-style: solid;
 }
 
 #weatherApp {
