--- a/styles/index.css
+++ b/styles/index.css
@@ -3,10 +3,17 @@ body {
     display: grid;
     grid-template: 25% 25% 25% 25%/ 50% 50%;
     gap: 10px;
+    color: darkblue;
     
 }
 section{
     border-radius: 25px;
+}
+#headerCityName{
+    font-size: 25px;
+    font-style: italic;
+
+
 }
 #titleGreeting{
     background-color: rgb(238, 238, 167);
@@ -55,13 +62,14 @@ section{
 }
 #landscape{
     background-color: rgb(238, 238, 167);
-    grid-row: 3;
+    grid-row: span 3;
     grid-column: 1;
     padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 300px;
     
 }
 #landscape p{
