--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,54 @@
 
 section {
-    /* height: 100px;
-    width: 100px; */
     border-style: solid;
-    border-color: blue;
+    border-color: coral;
+    border-radius: 20px;
+    /* padding: 30px; */
 }
 
-h1 {
-    color: coral;
+.container {
+    display: grid;
+    grid-template: 2fr 5fr 5fr 2fr / 1fr 1fr 1fr;
+    /* align-content: space-around;
+    justify-content: space-between; */
+    row-gap: 20px;
+    column-gap: 50px; 
+}
+
+body {
+    padding: 30px 50px;
+}
+
+#sky-display {
+    grid-column: 2/4;
+    grid-row: 1/2;
+}
+
+#city-display {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+#city-input-block {
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+#temperature {
+    grid-column: 2/3;
+    grid-row: 2/4;
+}
+
+#sky-select-block {
+    grid-column: 3/4;
+    grid-row: 2/4;
+}
+
+#landscape-block {
+    grid-column: 1/4;
+    grid-row: 4/6;
+}
+
+.text {
+    font-family: Arial, Helvetica, sans-serif;
 }
