--- a/styles/index.css
+++ b/styles/index.css
@@ -3,12 +3,12 @@ section {
     border-style: solid;
     border-color: coral;
     border-radius: 20px;
-    /* padding: 30px; */
+    padding: 10px 15px;
 }
 
 .container {
     display: grid;
-    grid-template: 2fr 5fr 5fr 2fr / 1fr 1fr 1fr;
+    grid-template: 2fr 2fr 3fr 2fr / 1fr 1fr 1fr;
     /* align-content: space-around;
     justify-content: space-between; */
     row-gap: 20px;
@@ -34,7 +34,7 @@ body {
     grid-row: 3/4;
 }
 
-#temperature {
+#temperature-block {
     grid-column: 2/3;
     grid-row: 2/4;
 }
@@ -51,4 +51,8 @@ body {
 
 .text {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#title-text {
+    font-size: 25pt;
 }
