--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,14 @@
 
-body {
-    background-image: url(../assets/bg-image.png);
+html {
+    background:
+    url(../assets/bg-image.png)
+    no-repeat;
     background-size: cover;
-    overflow: scroll;
-    height: 100%;
     margin: 0;
-}
+    overflow: hidden;
+    height: 100%;
+   }
+
 @font-face {
     font-family: Brewski;
     src: url(../assets/BrewskiTextured.woff2);
@@ -16,7 +19,7 @@ h1 {
     font-family: Brewski;
     font-style: normal;
     font-weight: normal;
-    font-size: 92px;
+    font-size: 86px;
     line-height: 100%;
     color: rgba(203, 174, 128, 0.85);
     text-align: left;
@@ -37,8 +40,8 @@ h1 {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 280px 73px 215px 394px;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 230px 73px 215px 200px;
     gap: 0px 0px;
     grid-auto-flow: row;
     height: 100%;
@@ -49,12 +52,10 @@ h1 {
   
 .title { 
     grid-area: 1/ 1 / 2 / 3;
-    border: 1px solid red;
  }
   
 .input-container { 
     grid-area: 3 / 1 / 4 / 2;
-    border: 1px solid red;
     display:flex;
     flex-direction: row;
     padding-left: 94px;
@@ -64,19 +65,20 @@ h1 {
   
 .city-name { 
     grid-area: 2 / 1 / 3 / 2;
-    border: 1px solid red;
     font-size: 36px;
     font-style: normal;
     font-weight: normal;
  }
   
 .refresh { 
-    grid-area: 4 / 1 / 5 / 2;
-    border: 1px solid red; }
+    grid-area: 4 / 1 / 5 / 2; }
   
 .display { 
     grid-area: 2 / 2 / 5 / 3;
-    border: 1px solid red; }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
 
 p {
     padding-left: 94px;
@@ -97,11 +99,10 @@ p {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    /* padding-left: 36px 29px 21px; */
 }
 
 h2 {
-    font-size: 120px;
+    font-size: 100px;
     text-align: center;
     font-weight: 200;
 }
@@ -111,7 +112,9 @@ h2 {
     flex-direction: column;
     justify-content: left;
     padding-right: 12px;
+    padding-left: 8px;
     border:none;
+    gap: 4px;
 
 }
 .sky {
@@ -136,6 +139,9 @@ margin: 0px 14px;
 font-size: 36px;
 }
 
+#skyState {
+    font-size: 56px;
+}
 #skies {
     background: rgba(203, 174, 128, 0.85);
 border-radius: 2px;
@@ -225,7 +231,7 @@ border-radius: 4px;
 font-size: 24px;
 line-height: 80%;
 transform: none;
-color:rgba(255, 255, 255, 0.7);
+color: rgba(203, 174, 128, 0.85);
 box-shadow: 0px 5px 10px 0px rgba(52, 33, 16, 0.2);
 transition: all 200ms ease-in-out;
 }
@@ -244,4 +250,28 @@ button {
     border-radius: 2px;
     color: black;
     border:none;
+    position: static;
+    width: 28px;
+    height: 28px;
+}
+
+button img {
+    width: 15px;
+    height: 15px;
+    display: flex;
+    justify-content: center;
+    vertical-align: middle;
+}
+
+/* .show-image {
+    display: block;
+} */
+
+#sky-sunny,
+#sky-cloudy,
+#sky-snowy,
+#sky-rainy {
+    display: none;
+    width: 100px;
+    height: 100px;
 }
