--- a/styles/index.css
+++ b/styles/index.css
@@ -41,10 +41,13 @@ h2 {
   margin: 0.1em auto;
 }
 
-p, label, select, input, button {
+p,
+label,
+select,
+input,
+button {
   font-size: 1.5em;
 }
-
 
 label {
   display: block;
@@ -55,7 +58,9 @@ input {
   width: 40%;
 }
 
-button, select, input {
+button,
+select,
+input {
   color: var(--btn-txt-color);
   background-color: var(--bg-color);
   border: none;
@@ -80,7 +85,8 @@ select:hover {
   flex-wrap: wrap;
 }
 
-.controls, .garden {
+.controls,
+.garden {
   background-color: var(--secondary-bg-color);
   border-radius: 1em;
   margin: 1em auto;
