--- a/styles/index.css
+++ b/styles/index.css
@@ -1,17 +1,20 @@
-body{
+.container{
     background-color: #293251;
     margin:0;
     display: grid;
+    height: 100vh;
     /* width:auto;
     height: auto; */
-    grid-template-columns: 30% 70%;
-    grid-template-rows: 6vw repeat(3, 13vw) 4vw; 
+    grid-template-columns: 3fr 7fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
     grid-template-areas: 
         "header header header"
         "temp_box display display"
         "sky_box display display"
         "city_box display display"
         "footer footer footer";
+    grid-gap: .5rem;
+
 }
 
 header{
@@ -25,7 +28,7 @@ footer{
 }
 main{
     grid-area: display;
-    background-color:cadetblue;
+    background-color:whitesmoke;
 }
 
 section:nth-of-type(1){
@@ -42,6 +45,36 @@ section:nth-of-type(3){
     background-color: darkseagreen;
 }
 
+
+#temperature-container, #sky-box, #city-box{
+    display: flexbox;
+    text-align: center;
+    background-color: whitesmoke;
+    padding: 2em;
+    border-radius: 1em;
+}
+#weather{
+    display: grid;
+    text-align: center; 
+    padding: 2em;
+    border-radius: 1em;
+    grid-gap: .5em;
+}
+#skyscape{
+    border-radius: 1em;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+
+}
+#landscape{
+    border-radius: 1em;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+/* temperatures */
 .freezing{
     color: blue;
 }
@@ -61,6 +94,7 @@ section:nth-of-type(3){
     color: red;
 }
 
+/* sky */
 .sunny{
     background-color: lightcyan;
 }
@@ -71,11 +105,39 @@ section:nth-of-type(3){
     background-color:lightsteelblue;
 }
 .snowy{
-    background-color: whitesmoke;
+    background-color:white;
 }
 
 
+/* earth */
+.ice{
+    background-color: powderblue;
+}
+.soil{
+    background-color: tan;
+}
+.leaves{
+    background-color: peru;
+}
+.ocean{
+    background-color: steelblue;
+}
 
+
+/* @media only screen and (max-width:550px){
+    .container{
+        grid-template-columns: 1fr;
+        grid-template-rows: .2fr .2fr .2fr .2fr .1fr .1fr;
+        grid-template-areas:
+            "header"
+            "temp-box"
+            "sky-box"
+            "city-box"
+            "display"
+            "footer";
+
+    }
+} */
 
 /*
 .container{
