updated input funcationality to dynamically display text. created rand implemented reset button to reset text

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,9 +2,11 @@
     display:flex;
 }
 
+h1 {
+    border-style: dashed;
+}
+
 #weatherSky {
-    /* align-self: center; */
-    /* justify-content: center; */
     padding:25px;
     border-style: dotted;
     width: 500px;
