--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,10 @@
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: skyblue;
+    padding-left: 5px;
+    padding-right: 5px;
 } 
+
 .container {
     display: grid;
     height: 100vh;
@@ -13,18 +16,19 @@
 main {
     background-color: white;
     border-radius: 25px;
+    min-width: 300px;
     grid-row: 2 / 4;
     grid-column: 3 / 8;
     display: flex;  
     justify-content: center; 
     align-items: center;
     padding: 10px;
-
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+/* city name in main heading container  */
 #city-name{
     background-color: white;
 }
@@ -47,6 +51,8 @@ main h3 {
 
 .emoji-section {
     background-color: white;
+    min-width: 500px;
+    min-height: 100px;
     border-radius: 30px;
     padding: 10px;
     grid-row: 4 / 6;
@@ -86,13 +92,13 @@ main h3 {
 .temperature-section {
     background-color: white;
     height: 200px;
+    min-width: 270px;
     border-radius: 15px 50px;
     grid-row: 6/10;
     grid-column: 1 / 4;
     display: flex;  
     justify-content: center; 
     align-items: center;
-
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -101,12 +107,11 @@ main h3 {
 #temperature-heading {
     background-color: white;
     grid-row: 6/9;
+    grid-column: 2/8;
     display: flex;
     align-items: center;
-    /* padding: 30px; */
-    font-size: 170%;
-    grid-column: 2/8;
     justify-content: center;
+    font-size: 170%;
 }
 
 #current-temp {
@@ -133,16 +138,16 @@ main h3 {
     cursor: pointer;
 }
 
-.sky-area {
+.sky-section {
     background-color: white;
     height: 200px;
+    min-width: 270px;
     border-radius: 15px 50px;
     grid-row: 6/10;
     grid-column: 4 / 7;
     display: flex;  
     justify-content: center; 
     align-items: center;
-
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -177,9 +182,10 @@ option {
     background-color: white;
 }
 
-.city-area {
+.city-section {
     background-color: white;
     height: 200px;
+    min-width:270px;
     border-radius: 15px 50px;
     grid-row: 6/10;
     grid-column: 7 / 10;
@@ -199,7 +205,6 @@ option {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* padding: 30px; */
     font-size: 170%;
 }
 
@@ -217,7 +222,6 @@ option {
     grid-row: 4/5;
     display: flex;
     align-items: center;
-    /* font-size: 170%; */
     grid-column: 3/6;
     display: flex;
     align-items: center;
@@ -229,7 +233,6 @@ option {
     border-radius: 50px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     cursor: pointer;
-
     display: flex;
     grid-row: 4/5;
     grid-column: 6/7;
