--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,12 @@ h1 {
     text-align: center;
 }
 
+#bunnyGif {
+    width: 100px;
+    height: 120px;
+    margin-top: 30px;
+}
+
 #cityDisplay {
     text-align: center;
     font-size: 35px;
