--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0;
+    margin: 10px;
     padding: 0;
     box-sizing: border-box;
 }
@@ -7,6 +7,10 @@
 body {
     height: 100vh;
     display: flex;
+    /* grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
+    grid-gap: 1rem; */
+    margin: 2rem;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -19,6 +23,25 @@ body {
 h1 {
     font-size: 90px;
     font-weight: lighter;
+}
+
+.city-name-section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.sky-section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .location, 
@@ -56,14 +79,21 @@ h1 {
     font-size: 40px;
 }
 
+
 #decrease-temperature {
     height: 5vh;
-    width: 20%;
-    padding: 5px;
+    width: 50%;
+    padding: 10px;
+    margin: 2.5px;
 }
 
 #increase-temperature {
     height: 5vh;
-    width: 20%;
-    padding: 5px;
+    width: 50%;
+    padding: 10px;
+    margin: 2.5px;
+}
+
+#header-city-name {
+    justify-content: center;
 }
