--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 h1 {
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
+    margin: auto;
     font-style: sans-serif;
     font-size: 3rem;
     color: #1e1e24;
