--- a/styles/index.css
+++ b/styles/index.css
@@ -24,6 +24,21 @@ h2 {
     line-height: 10px;
 }
 
+.city-text {
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    text-shadow: rgba(0, 0, 0, 0.262) 0.3em 0.3em 0.2em;
+    margin-left: 30px;
+}
+
+#header-city {
+    font-size:30px;
+    font-style: italic;
+    color:rgb(13, 93, 184);
+    text-shadow: rgba(0, 0, 0, 0.262) 0.3em 0.3em 0.2em;
+    vertical-align: middle;
+}
+
 section {
     height: 80vh;
     display: flex;
@@ -117,7 +132,7 @@ button_area {
     text-align:center;
 }
 
-#sky_submit {
+#skyButton {
     margin-top: 10px;
 }
 
@@ -185,17 +200,29 @@ footer {
     color: rgb(0, 0, 0);
     width: 100%;
     background-color: #3baae6;
-    height: 5vh;
+    height: fit-content;
 }
 
 /* sections sit on top of each other on smaller screens */
 @media (max-width: 1000px) {
     header {
         display: flex;
+        height:fit-content;
     }
+
+    .header-text {
+        margin-left: 10px;
+    }
+
+    .city-text {
+        text-align: center;
+        margin: auto;
+    }
+
     section {
         display: flex;
         flex-direction: column;
+        height: fit-content;
     }
     sidebar {
         display: flex;
@@ -212,13 +239,9 @@ footer {
     .information-obj {
         transform: scale(0.85);
     }
-    footer {
-        /* literally cannot get this dumb thing to the bottom!!!!!!! */
-        color: rgba(255, 255, 255, 0);
-    }
 }
 
-@media (max-height: 650px) {
+/* @media (max-height: 650px) {
     header {
         display: flex;
     }
@@ -243,6 +266,6 @@ footer {
     }
     footer {
         /* literally cannot get this dumb thing to the bottom!!!!!!! */
-        color: rgba(255, 255, 255, 0);
+        /* color: rgba(255, 255, 255, 0);
     }
-}
+} */ 
