--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,7 @@ header {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    /* background: url('https://i.gifer.com/CZx.gif');   */
     background-color: #373e30;
     width: 100%;
     padding: 0px;
@@ -37,7 +38,6 @@ span.fancy {
     font-family: 'Snell Roundhand', cursive;
     font-size: 90px;
 }
-
 
 p {
     padding-right: 30px;
@@ -70,6 +70,7 @@ select {
 #temperature-section {
     text-align: center;
     background-color: #819373;
+    font-size: 15px;
     border-radius: 20px;
 }
 #garden-section {
@@ -79,18 +80,20 @@ select {
 }
 #temperature-section {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
-#temp-integer {
-    font-size: 50px;
-}
+/* #temp-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
 
 #arrows {
-    font-size: 15px;
-}
+    font-size: 30px;
+    text-align: center;
+} */
 
 #name {
     border: none;
