--- a/styles/index.css
+++ b/styles/index.css
@@ -94,3 +94,9 @@ body {
     font-size: 45pt;
     font-;
 }
+
+#landscape-block {
+    background-image: url(/imgs/landscape-default.jpg);
+    background-size: cover;
+    background-position: bottom;
+}
