--- a/styles/index.css
+++ b/styles/index.css
@@ -7,31 +7,49 @@ body {
     margin: 2rem;
     height: 100%;
     max-width: 100%;
+    min-width: 568px;
     background-image: linear-gradient(180deg, #093824, #251F47);
+
+}
+header{
+    min-width: 400px;
 }
 h1 {
     color: white;
     text-align: right;
     line-height: 0.3em;
+    
 }
 h2{
     color: white;
 }
 h3{
     color: #EDFFAB;
+    
+}
+h4{
+    color: #EDFFAB;
+    font-size: 35px;
+    font-family: sans-serif;
 }
 .city-header-welcome{
  padding-left: 5px;
 }
 .weather-garden{
+    text-align: center;
     background-color: #404E7C;
     border-radius: 25px;
-    width: 460px;
-    min-width: 460px;
-    padding: 10px;
+    width: 390px;
     margin-top: 30px;
     border-style:solid;
     border-color: white;
+}
+.weather-landscape{
+    text-align: center;
+    background-color: turquoise;
+     border-bottom-left-radius: 25px;
+      border-bottom-right-radius: 25px;
+
 }
 
 #sky-temperature-container{
@@ -40,7 +58,7 @@ h3{
 }
 .sky-selection-section{
     background-color: #64B6AC;
-    min-width: 200px;
+    min-width: 120px;
     padding: 10px;
     border-radius: 25px;
     border-style:solid;
@@ -48,10 +66,16 @@ h3{
 }
 .remote-control-box{
     display: flex;
+    overflow: hidden;
+    align-items: center;
+    height: 50px;
+
 }
 .temperature-control-section{
+    overflow: hidden;
     background-color: #64B6AC;
-    min-width: 200px;
+    min-width: 185px;
+    height: 130px;
     padding: 10px;
     margin-right: 40px;
     border-radius: 25px;
